style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    
}

html{
    scrollbar-gutter: stable;

}

body{
    background-color: #F6F5E9;
}


/*NAVIGATION BAR*/
nav{
    display: flex;
    justify-content: space-between;
    padding-left: 1%;
    align-items: center;
    min-height: 10vh;
    background-color: #0D3B66;
    font-family: 'DM serif';
    position: sticky;
    top: 0;
}

.logo {
    color: #FFFFFF;
    text-transform: uppercase;
    letter-spacing: 3px;
    
}

.nav-links{
    display: flex;
    justify-content: space-around;
    width: 35%;
}
.nav-links li{
    list-style: none;
}

.nav-links a{
    color: #FFFFFF;
    text-decoration: none;
    letter-spacing: 2px;
    font-size: 16px;
    transition: color 0.3s ease;
    
}

.nav-links a:hover{
    color: #ffe0b0;
    text-decoration: none;
    letter-spacing: 2px;
    font-size: 16px;
    
}
/*CONTACTS*/
.contact-ul{
    display: flex;
    align-items: center;
}

.contact-ul li{
    list-style: none;
}

/*HOMEPAGE INFO*/

.homepage-img img{
    padding-top: 7%;
    width: 720px;
    height: 400px;
    object-fit: cover;
    margin-right: 0;
    margin-bottom: 15px;
    object-position: left;
}



.aboutme p{
    
    display: flex;
    justify-content: space-between;
    max-width: 70vh;
    min-width: 50vh;
    padding:1%;
    padding-left: 4%;
    font-family: DM serif;
    font-size: 20px;
}

.aboutme h3{
    padding-bottom: 10%;
    display: flex;
    font-family: DM serif;
    font-size: 24px;
    padding-left: 4%;
}

.contacts {
    padding: 1%;
}

.container {
    display: flex;
    align-items: center;
    gap: 30vh;
}

/*PROJECTS PAGE*/

.projectcontainer{
    display: flex;
    align-items: flex-start;
    justify-content: space-around;
    flex-direction: column;
}

.projectcontainer h4{
    padding-bottom: 10%;
    display: flex;
    font-family: DM serif;
    font-size: 24px;
    padding-left: 4%;

}

.projectcontainer p{
    display: flex;
    justify-content: space-between;
    max-width: 70vh;
    min-width: 50vh;
    padding:1%;
    padding-left: 4%;
    font-family: DM serif;
    font-size: 20px;


}

